letter spacing fix

--- a/express/fullstack-webpage/client/source/styles/Footer.sass
+++ b/express/fullstack-webpage/client/source/styles/Footer.sass
@@ -73,3 +73,14 @@
                         font-size: 33px
                     a
                         letter-spacing: 0.7px
+
+@media only screen and (max-width: 700px)
+    .footer-background
+        .footer-container
+            width: 600px
+            .footer-items
+                .logo
+                    i
+                        font-size: 30px
+                    a
+                        letter-spacing: 0.1px
